--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>A simple Keylogger in Javascript</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script></script>
-</head>
-<body>
-  <h1>Key logger</h1>
-
-  <p>collect all pressed keys</p>
-  <input type="text" />
-  <textarea> </textarea>
-</body>
+<html>
+  <head>
+    <title>
+      Simple JS Keylogger Example
+    </title>
+    <script src="keylog.js"></script>
+  </head>
+  <body>
+    <h1>
+      Keylogger Example
+    </h1>
+    <p>
+      All keypresses will be collected.
+    </p>
+    <input type="text"/>
+    <textarea></textarea>
+  </body>
 </html>
