--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>A simple Keylogger in Javascript</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script></script>
+ <script src="keylog.js"></script>
 </head>
 <body>
   <h1>Key logger</h1>
